--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -4,19 +4,15 @@ on: [push, pull_request]
 
 jobs:
   build:
-    name: Build on ${{ matrix.os }} with Go ${{ matrix.go }}
-    runs-on: $matrix.os
-    strategy:
-      matrix:
-        os: [ubuntu-latest]
-        go: ['1.22.1']
+    name: Build
+    runs-on: ubuntu-latest
     steps:    
     - name: Check out code into the Go module directory
       uses: actions/checkout@v2.4.0
-    - name: Set up Go ${{ matrix.go }}
+    - name: Set up Go
       uses: actions/setup-go@v2.1.4
       with:
-        go-version: ${{ matrix.go }}
+        go-version: 1.22.1
     - name: Download dependencies
       run: go mod download
     - name: Cache modules
